--- a/lipu-pi-nasin-sewi/9.md
+++ b/lipu-pi-nasin-sewi/9.md
@@ -12,10 +12,10 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 持而盈之不如其已 |  | To hold until full is not as good as stopping.
-| 揣而锐之不可长保 |  | An oversharpened sword cannot last long.
-| 金玉满堂莫之能守 |  | A room filled with gold and jewels cannot be protected.
-| 富贵而骄自遗其咎 |  | Boasting of wealth and virtue brings your demise.
+| 持而盈之<br/>不如其已 |  | To hold until full is not as good as stopping.
+| 揣而锐之<br/>可长保 |  | An oversharpened sword cannot last long.
+| 金玉满堂<br/>之能守 |  | A room filled with gold and jewels cannot be protected.
+| 富贵而骄<br/>遗其咎 |  | Boasting of wealth and virtue brings your demise.
 | 功遂身退         |  | After finishing the work, withdraw.
 | 天之道           |  | This is the Way of Heaven.
 
