--- a/lipu-pi-nasin-sewi/16.md
+++ b/lipu-pi-nasin-sewi/16.md
@@ -10,16 +10,15 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-致虚极、守静篤。万物竝作、吾以观復。夫物艺艺、各復归其根。归根曰静。是谓復命。復命曰常。知常曰明。不知常、妄作凶。知常容。容乃公。公乃王。王乃 天。天乃道。道乃久。没身不殆。
-
+，是谓复命。复命曰常，知常曰明。不知常，妄作凶。知常容，容乃公，公乃王，王乃天，天乃道，道乃久，没身不殆。
 {:.loseta}
 |:-:|-|-
-|  |  | Effect vacuity to the extreme.
-|  |  | Keep stillness whole.
-|  |  | Myriad things act in concert.
-|  |  | I therefore watch their return.
-|  |  | All things flourish and each returns to its root.
-|  |  | Returning to the root is called quietude.
+| 致虚极 |  | Effect vacuity to the extreme.
+| 守静篤 |  | Keep stillness whole.
+| 万物並作 |  | Myriad things act in concert.
+| 吾以观复 |  | I therefore watch their return.
+| 夫物芸芸 |  | All things flourish and each returns to its root.
+| 各复归其根 |  | Returning to the root is called quietude.
 |  |  | Quietude is called returning to life.
 |  |  | Return to life is called constant.
 |  |  | Knowing this constant is called illumination.
